fix: fixes login and verify auth response and swagger
